  Changelog for the c-ares project

* Jul 2 2008 (Yang Tse)
- Fallback to gettimeofday when monotonic clock is unavailable at run-time.

* Jun 30 2008 (Daniel Stenberg)

- As was pointed out to me by Andreas Schuldei, the MAXHOSTNAMELEN define is
  not posix or anything and thus c-ares failed to build on hurd (and possibly
  elsewhere). The define was also somewhat artificially used in the windows
  port. Now, I instead rewrote the use of gethostbyname to enlarge the host
  name buffer in case of need and totally avoid the use of the MAXHOSTNAMELEN
  define. I thus also removed the defien from the namser.h file where it was
  once added for the windows build.

  I also fixed init_by_defaults() function to not leak memory in case if
  error.

* Jun 9 2008 (Yang Tse)

- Make libcares.pc generated file for pkg-config include information relative
  to the libraries needed for the static linking of c-ares.

* May 30 2008 (Yang Tse)

- Brad House fixed a missing header file inclusion in adig sample program.

Version 1.5.2 (May 29, 2008)

* May 13 2008 (Daniel Stenberg)

- Introducing millisecond resolution support for the timeout option. See
  ares_init_options()'s ARES_OPT_TIMEOUTMS.

* May 9 2008 (Yang Tse)

- Use monotonic time source if available, for private function ares__tvnow()

* May 7 2008 (Daniel Stenberg)

- Sebastian made c-ares able to return all PTR-records when doing reverse
  lookups. It is not common practice to have multiple PTR-Records for a single
  IP, but its perfectly legal and some sites have those.

- Doug Goldstein provided a configure patch: updates autoconf 2.13 usage to
  autoconf 2.57 usage (which is the version you have specified as the minimum
  version). It's a minor change but it does clean up some warnings with newer
  autoconf (specifically 2.62).

* May 5 2008 (Yang Tse)

- Improved parsing of resolver configuration files.

* April 4 2008 (Daniel Stenberg)

- Eino Tuominen improved the code when a file is used to seed the randomizer.